Fix layout overlap, image paths, and add discount feature

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,13 @@ p {
 
 .hero {
   position: relative;
+  margin-bottom: 3rem;
+  overflow: hidden;
+}
+
+.hero img {
+  display: block;
+  width: 100%;
 }
 
 .hero .logo {
@@ -69,18 +76,17 @@ p {
   left: calc(50% - 60px);
   bottom: -15px;
   background-color: white;
+  z-index: 2;
 }
 
 .logo--square {
   font-size: var(--small-font);
   width: 110px;
   height: 80px;
-
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   box-shadow: 1px 1px 4px var(--light-grey);
   justify-content: center;
-  align-items: center;
   line-height: 1;
 }
 
@@ -90,7 +96,7 @@ p {
   margin-top: -1.3em;
 }
 
-.logo--square > div {
+.logo--square>div {
   margin-top: -1.7em;
 }
 
@@ -134,26 +140,32 @@ button {
 /* End cart icon styles */
 
 .mission {
-  position: absolute;
-  top: 1rem;
-  left: 0;
-  right: 0;
   line-height: 1.3;
-  width: 100%;
   background-color: var(--dark-grey);
   color: var(--light-grey);
-  opacity: 0.8;
+  padding: 0.75rem 1rem;
+  max-width: 50%;
 }
 
 .mission p {
-  margin: 0 auto;
-  width: 50%;
-  text-align: center;
+  margin: 0;
+  text-align: left;
 }
 
 .products {
   margin-top: 2rem;
   padding: 1rem;
+  position: relative;
+}
+
+.products h2 {
+  background-color: var(--dark-grey);
+  color: var(--light-grey);
+  padding: 0.75rem;
+  margin-bottom: 1rem;
+  position: relative;
+  z-index: 1;
+  display: inline-block;
 }
 
 .product-list {
